--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,21 @@
                 </div>
                 <div
                     class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
-                    <p>{{site.author-about}}</p>
+                    <p>
+                        My name is Aleksandar Aytov and I am a full-stack web developer with a deep passion for creating innovative and functional software solutions.
+                    </p>
+                    <br>
+                    <p>
+                        With a solid foundation in Java, Spring, Kubernetes, and Angular, I am proficient in all aspects of web development, from back-end architecture to front-end design.
+                    </p>
+                    <br>
+                    <p>
+                        Throughout my career, I have consistently sought opportunities to expand my knowledge and skills. Currently, I am pursuing a Master's degree in Information Technology in Business Management while simultaneously working as a Senior Web Developer at SAP.
+                    </p>
+                    <br>
+                    <p>
+                        I am driven by a desire to make a positive impact through my work. I enjoy collaborating with teams to bring complex projects to life and helping people achieve their goals through technology.
+                    </p>
                     <br>
                     <div class="container columns is-centered">
                         <!-- <div>
