--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,6 +25,7 @@
                     href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">HOME</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#about">ABOUT</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#project">PROJECTS</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>
             </div>
 
         </div>
